Fix #307 (Contrast too low for text "Dated result ....").

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1269,9 +1269,6 @@ table td {
   padding: 0;
   margin: 0;
 }
-#dated-results-warning a{
-  color: #05BFD6;
-}
 
 .retest-text {
   color: #6D6D6D;
